[gd_scene load_steps=5 format=1]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://Themes/corona_dn.png" type="Texture" id=2]
[ext_resource path="res://fonts/perfect_dark.fnt" type="BitmapFont" id=3]
[ext_resource path="res://music/11. groovyhiphop.ogg" type="AudioStream" id=4]

[node name="main_screen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -2.0
margin/right = 0.0
margin/bottom = 2.0
script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 512.663, 299.53 )
transform/scale = Vector2( 1.00045, 0.582643 )
z/z = -1
texture = ExtResource( 2 )
__meta__ = { "_edit_lock_":true }

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 373.0
margin/top = 82.0
margin/right = 606.0
margin/bottom = 103.0
custom_fonts/font = ExtResource( 3 )
text = "Star Cannoneer"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 386.0
margin/top = 175.0
margin/right = 562.0
margin/bottom = 196.0
custom_fonts/font = ExtResource( 3 )
text = "HIGH SCORE  "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="play" type="Button" parent="."]

hint/tooltip = "Lets get started!"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 256.0
margin/right = 536.0
margin/bottom = 306.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="credits" type="Button" parent="."]

hint/tooltip = "Credits"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 396.0
margin/right = 536.0
margin/bottom = 446.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="options" type="Button" parent="."]

hint/tooltip = "Like Sounds and Music"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 326.0
margin/right = 536.0
margin/bottom = 376.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="quit" type="Button" parent="."]

hint/tooltip = "Are you sure \?"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 466.0
margin/right = 536.0
margin/bottom = 516.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Story" type="Button" parent="."]

hint/tooltip = "Not ready yet"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 256.0
margin/right = 720.0
margin/bottom = 306.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Story"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Intro" type="Button" parent="."]

hint/tooltip = "Not ready yet"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 326.0
margin/right = 720.0
margin/bottom = 376.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Intro"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Level" type="Button" parent="."]

hint/tooltip = "Not ready yet"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 396.0
margin/right = 720.0
margin/bottom = 446.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="Ships" type="Button" parent="."]

hint/tooltip = "Not ready yet"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 466.0
margin/right = 720.0
margin/bottom = 516.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ships"
flat = false
__meta__ = { "_edit_lock_":true }

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]

[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]

[connection signal="pressed" from="options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]


